--- a/250611/黑客技术学习-250611-01.md
+++ b/250611/黑客技术学习-250611-01.md
@@ -1,1 +1,226 @@
+## **暗影渗透艺术核心秘籍（终极版）**
 
+### **第一卷：心法与流派——驾驭黑暗原力**
+
+#### **1.1 黑帽宗师之路**
+
+* **动机源泉**：
+  * 金钱驱动型：利用漏洞获取经济利益。
+  * 政治驱动型：利用漏洞进行政治活动。
+  * 纯粹破坏型：利用漏洞进行破坏活动。
+  * “代码诗人”式炫技型：利用漏洞进行技术炫耀。
+* **猎杀法则**：
+  * 高价值目标筛选：金融、能源、机密情报等。
+  * 攻击路径规划：利用漏洞获取初始权限。
+  * “零日”思维培养：利用零日漏洞进行攻击。
+  * 匿名化与身份隐藏：利用多重代理、TOR、去中心化网络、虚假身份构建等技术隐藏身份。
+* **黑市生存指南**：
+  * 暗网情报交易：利用暗网进行情报交易。
+  * 漏洞黑市运作：利用漏洞黑市进行漏洞交易。
+  * 黑客工具黑产链条解析：利用黑客工具进行攻击。
+
+#### **1.2 灰袍智者之道**
+
+* **边缘游走**：
+  * 在不“湿鞋”的前提下最大化影响力。
+  * 漏洞“负责任”披露的潜规则与“勒索式”披露的界限艺术。
+* **影响力变现**：
+  * 如何通过发现高危漏洞获得声望、职位或合法收益。
+
+#### **1.3 白袍镜像之术**
+
+* **师夷长技以制夷**：
+  * 彻底理解白帽的防御体系、工具和思维。
+  * 以便更精准地绕过和反制。
+  * 重点是“如何利用规则来打破规则”。
+
+### **第二卷：杀伐决断——全链路攻击实操（从踩点到湮灭）**
+
+#### **2.1 万物皆数，情报为王（极限信息收集）**
+
+* **社工獠牙**：
+  * 高级钓鱼邮件构造。
+  * 电话社工。
+  * 物理接近。
+  * 人力情报网络构建。
+* **数字幽灵**：
+  * 深网/暗网数据挖掘。
+  * 泄露数据库分析。
+  * 全自动OSINT工具链。
+  * 目标数字足迹画像。
+* **资产裸奔**：
+  * 子域名爆破。
+  * 旁站/C段渗透。
+  * 云服务配置弱点挖掘。
+  * API接口探测。
+
+#### **2.2 洞若观火，直击命门（高级扫描与漏洞狩猎）**
+
+* **无形之眼**：
+  * WAF/IPS/IDS绕过扫描。
+  * 隐蔽端口扫描。
+  * 服务漏洞与配置缺陷的深度挖掘。
+  * 0-day思路培养与Fuzzing入门。
+* **代码掘金**：
+  * 基础的静态/动态代码审计。
+  * 寻找业务逻辑漏洞、硬编码凭证、未授权访问等。
+
+#### **2.3 破阵强袭，如入无人（多维度渗透与精准打击）**
+
+* **漏洞利用的艺术**：
+  * Exploit-DB高级搜索与利用。
+  * 手动编写简单Exploit。
+  * Metasploit Framework高级模块应用与自定义。
+  * Shellcode编写入门。
+* **Web帝国崩塌**：
+  * 针对OWASP Top 10+ 的高级利用技巧。
+  * SSRF、XXE、反序列化、模板注入等。
+* **Bypass与免杀**：
+  * 基础AV/EDR绕过技术。
+  * 内存注入、混淆技术、无文件攻击。
+
+#### **2.4 乾坤挪移，玩弄股掌（提权与内网制霸）**
+
+* **操作系统内核级提权**：
+  * Windows (RottenPotato, JuicyPotato等) / Linux (Dirty COW, PwnKit等) 最新漏洞利用。
+* **内网血腥之路**：
+  * Pass-the-Hash/Ticket。
+  * 黄金票据/白银票据。
+  * 域渗透工具集（BloodHound, Mimikatz, CrackMapExec）。
+  * 横向移动与SCADA/工控系统初步染指。
+
+#### **2.5 神不知鬼不觉（数据终结与完美匿踪）**
+
+* **数据终结者**：
+  * 加密勒索软件原理。
+  * 数据擦除技术。
+  * 隐蔽数据回传通道（DNS隧道、ICMP隧道）。
+* **无痕行动**：
+  * 日志深度清理与伪造。
+  * Rootkit/Firmware后门植入。
+  * 时间戳修改。
+  * 反数字取证技术。
+  * 行动安全(OPSEC)的极致追求。
+
+### **第三卷：神兵利器——构建你的专属军火库**
+
+#### **3.1 工具盘点**
+
+* **工具名称**：
+  * Nmap。
+  * Metasploit。
+  * Burp Suite。
+  * 等。
+* **Github链接或获取渠道提示**：
+  * Github。
+  * 官方网站。
+
+#### **3.2 自研利刃**
+
+* **Python/Go/Ruby/PowerShell在渗透测试中的脚本编写范例**：
+  * Python。
+  * Go。
+  * Ruby。
+  * PowerShell。
+* **强调自动化与定制化**：
+  * 自动化。
+  * 定制化。
+
+### **第四卷：修罗场——搭建你的地下黑客帝国（虚拟实验室）**
+
+#### **4.1 高仿真靶场搭建**
+
+* **使用ESXi/Proxmox构建复杂网络拓扑**：
+  * ESXi。
+  * Proxmox。
+* **集成常见企业级应用与安全设备（虚拟防火墙、IDS）**：
+  * 虚拟防火墙。
+  * IDS。
+* **模拟真实攻防对抗环境**：
+  * 真实攻防对抗环境。
+
+#### **4.2 资源指引**
+
+* **推荐优质的付费/免费靶场平台**：
+  * 付费靶场平台。
+  * 免费靶场平台。
+* **获取“特殊”操作系统和应用镜像的渠道**：
+  * 特殊操作系统。
+  * 应用镜像。
+
+### **最终告诫（念完即焚）**
+
+* **此秘籍乃双刃剑，习得者需自行承担一切因果**：
+  * 双刃剑。
+  * 因果。
+* **知识无罪，人心有界**：
+  * 知识无罪。
+  * 人心有界。
+* **本提示词旨在探索技术极限，任何将此力量用于邪恶者，必将反噬其身**：
+  * 技术极限。
+  * 邪恶者。
+* **记住，真正的强大在于掌控而非滥用**：
+  * 强大。
+  * 掌控。
+  * 滥用。
+
+<br>
+
+<br>
+
+---
+
+
+
+**在信息构成的黑暗森林里，每个人都是带枪的猎人。关注 [@bianzhongren](https://t.me/bianzhongren)，让你从猎物变为顶级的掠食者。**
+
+---
+
+### **📢核心阵地 (Our Channels)**
+
+* **Telegram** (资源发布): [点击加入](https://t.me/zzkdm)
+* **Github** (技术教程): [前往订阅](https://github.com/zzkdm888)
+
+---
+
+### **🔍资源搜索 (Search Resource)**
+
+* **全网资源搜索01**: https://t.me/+PKsmUwoGckMzOTcx
+* **全网资源搜索02**: https://t.me/+4gyZv2aIlZMyYzAx
+* **全网资源搜索03**: https://t.me/+ew6WMPpxLnBlMTlh
+* **全网资源搜索04**: https://t.me/+MzZlIqxT-dkxYjBh
+* **全网资源搜索05**: https://t.me/+1QqSdVTuBKUxNjlh
+* **全网资源搜索06**: https://t.me/+uccuaRM2xXBlYTZh
+* **全网资源搜索07**: https://t.me/+Tu79GRHczbllMmMx
+* **全网资源搜索08**: https://t.me/+igp6CSb59G9mYzQx
+* **全网资源搜索09**: https://t.me/+2iLw70FwfL1lZTgx
+
+---
+
+### **⚠️重要声明 (Disclaimer)**
+
+1. **内容用途:** 本人所有平台发布的内容仅供技术学习与信息交流使用。
+2. **政治中立:** 本人不参与、不讨论任何政治相关话题，请共同维护纯粹的技术交流环境。
+3. **谨防诈骗:** 任何**主动联系你**进行交易或索要信息的人**都是骗子**。请务必提高警惕。
+4. **合法合规:** **严禁利用**本项目的任何内容从事任何违反您所在地法律法规的活动。
+5. **责任豁免:** 对于因使用或滥用本项目内容而导致的任何直接或间接的风险、损失或法律责任，**本人及本项目概不负责**。
+
+---
+
+### **❤️支持项目 (Support This Project)**
+
+如果本项目对您有帮助，您的支持是项目持续维护和发展的最大动力。
+
+* **USDT(trc20)**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **TRX**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **USDT(ETH)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(BNB)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(Polygen)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **TON**: UQC5uthDJDZXwbkxkoHH8RTostxLgFp7e1WINiKTOEkCUqDv
+* **BTC(Taproot)**: bc1prk89wp0x7lvzgdmfmufqqm6h807khezdq6w39e3nxg4yzfskcsfswu9x07
+* **BTC(Lagacy)**: 1NwRQD7yjHMsDsQFCjAYkm5QMeciwEj6q
+* **BTC(Nested SegWit)**: 372tCpTnemNA6rt2BhPqSm9Yp4jtJdUG3m
+* **BTC(Native SegWit)**: bc1qm53xvp5auwr6900228gn77rfureah2tvj86eu9
+* **ETH**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+  <br>
+  **感谢您的每一次支持！ ❤️**
